ajuste contrato e estruturacao projeto
